css/style.css
@font-face {
  font-family: "Avenir";
  src: url("../fonts/Avenir.ttc") format("truetype");
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Avenir, sans-serif;
}

:root {
  --main-color: red;
  --text-color: #000000;
  --bg-color: #ffffff;
}

body {
  display: flex;
  color: var(--text-color);
  background-color: var(--bg-color);
  height: 100vh;
}

body .left {
  /* background-image: url(../images/bg.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  min-width: 50%;
  height: 600px; */
  background-color: red;
  width: 50%;
  height: 100vh;
}

body .right {
  background-color: var(--bg-color);

  width: 50%;
  /* height: 100vh; */
  padding: 96px 106px 96px 120px;
}

body .right h1 {
  font-weight: 700;
  font-size: 31.25px;
  line-height: 130%;
  margin-bottom: 12px;
}

body .right .explain {
  display: block;
  font-weight: 400;
  font-size: 16px;
  line-height: 160%;
  color: #666666;
  margin-bottom: 32px;
}

body .right .shop-all {
  display: inline-block;
  border-bottom: 1px solid;
  padding-bottom: 5px;
  font-weight: 900;
  font-size: 12.8px;
  line-height: 17px;
  margin-bottom: 74px;
  cursor: pointer;
}

.wrapper {
  display: flex;
  /* max-width: 1200px;
  position: relative; */
}
.wrapper .carousel {
  /* font-size: 0px; */
  /* display: flex; */
  cursor: pointer;
  display: flex;
  overflow: hidden;
  /* white-space: nowrap; */
  /* scroll-behavior: smooth; */
}

.card img {
  height: 310px;
  object-fit: cover;
  user-select: none;
  margin-left: 32px;
  width: 230px;
  margin-left: 0;
}

.card {
  margin-right: 20px;
}

.card span,
b {
  /* display: block; */
  font-size: 12px;
  /* margin-left: 14px; */
  /* margin-top: 12px; */
  font-size: 12.8px;
}

.card span {
  margin-top: 12px;
}

.card u {
  margin-top: 4px;
  font-weight: 500;
}

.price-colors {
  /* background-color: yellow; */
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
}

.price-colors .balls-container {
  color: red;
}

.ball {
  display: inline-block;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: red;
}

.green {
  background-color: #a6cc99;
}
.purple {
  background-color: #cb99cc;
}
.lila {
  background-color: #cc9999;
}
.blue {
  background-color: #99c4cc;
}

.selected {
  border: 1px solid black;
}

